syntax = "proto3";

package controlplane.v1;

option go_package = "github.com/sebastianm/flowgentic/internal/proto/gen/controlplane/v1;controlplanev1";

// EmbeddedWorkerService provides lifecycle management for the embedded worker
// process managed by the control plane.
service EmbeddedWorkerService {
  // StartEmbeddedWorker starts the embedded worker process.
  rpc StartEmbeddedWorker(StartEmbeddedWorkerRequest) returns (StartEmbeddedWorkerResponse) {}

  // StopEmbeddedWorker stops the embedded worker process.
  rpc StopEmbeddedWorker(StopEmbeddedWorkerRequest) returns (StopEmbeddedWorkerResponse) {}

  // RestartEmbeddedWorker restarts the embedded worker process.
  rpc RestartEmbeddedWorker(RestartEmbeddedWorkerRequest) returns (RestartEmbeddedWorkerResponse) {}

  // WatchEmbeddedWorkerStatus streams real-time status updates for the
  // embedded worker.
  rpc WatchEmbeddedWorkerStatus(WatchEmbeddedWorkerStatusRequest) returns (stream WatchEmbeddedWorkerStatusResponse) {}
}

// EmbeddedWorkerStatus represents the lifecycle state of the embedded worker.
enum EmbeddedWorkerStatus {
  EMBEDDED_WORKER_STATUS_UNSPECIFIED = 0;
  EMBEDDED_WORKER_STATUS_STOPPED = 1;
  EMBEDDED_WORKER_STATUS_STARTING = 2;
  EMBEDDED_WORKER_STATUS_RUNNING = 3;
  EMBEDDED_WORKER_STATUS_STOPPING = 4;
  EMBEDDED_WORKER_STATUS_ERRORED = 5;
}

message StartEmbeddedWorkerRequest {}

message StartEmbeddedWorkerResponse {
  EmbeddedWorkerStatus status = 1;
  string error = 2;
  string worker_id = 3;
  string listen_addr = 4;
  int32 pid = 5;
}

message StopEmbeddedWorkerRequest {}

message StopEmbeddedWorkerResponse {
  EmbeddedWorkerStatus status = 1;
  string error = 2;
}

message RestartEmbeddedWorkerRequest {}

message RestartEmbeddedWorkerResponse {
  EmbeddedWorkerStatus status = 1;
  string error = 2;
  string worker_id = 3;
  string listen_addr = 4;
  int32 pid = 5;
}

message WatchEmbeddedWorkerStatusRequest {}

message WatchEmbeddedWorkerStatusResponse {
  EmbeddedWorkerStatus status = 1;
  string error = 2;
  string worker_id = 3;
  string listen_addr = 4;
  int32 pid = 5;
}
